2002-08-28  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (client_notify_widget): spell check or clear spell
	checking errors on live_spell_check flag change
	(command): added scroll-bod, scroll-eod commands
	(command): allow copy in non editing mode and bind it to C-c

2002-08-27  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (draw_pixmap): work around gdk-pixbuf bug when
	doinging bilinear interpolation to 1x1, now use nearest in that
	case.  Fixes crash in ximian bug #12968.

2002-08-27  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c: fix scroll behavior, work around layout
	page_increment = height / 2

2002-08-26  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (move_object_cursor): don't allow objects not
	capable of accepting cursor to accept it

2002-08-23  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (validate_tables): new function,
	inserts new line in case we end with invalid flow layout after
	delete

2002-08-22  Radek Doulik  <rodo@ximian.com>

	* htmltext.c: allow + in user name in mail addres and don't allow
	wwwblabla, ftpbla, ...

	* gtkhtml.c (drag_begin): select dragged object
	(dnd_link_set): no dnd in edit mode
	(dnd_link_unset): ditto

	* htmlengine.c (html_engine_stream_write): in case size == -1
	calculate length of buffer

2002-08-21  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (set_focus_child): test if object is not an frame
	before setting it as focus_object

2002-08-20  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (alloc_font): scale width using new macro

	* htmlprinter.h (SCALE_GNOME_PRINT_FONT_TO_ENGINE): new macro for
	scaling font width

2002-08-19  Radek Doulik  <rodo@ximian.com>

	* htmlcluev.c (draw): fixed width and height of aligned objects
	drawing

2002-08-12  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_private_calc_scrollbars): bail if the widget
	isn't realized.

2002-08-09  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_set_painter): recalculate the