@@ -1,3 +1,8 @@
+2002-08-30  Radek Doulik  <rodo@ximian.com>
+
+	* gtkhtml.c (insert_tab_or_next_cell): paste text instead of
+	inserting it
+
 2002-08-28  Radek Doulik  <rodo@ximian.com>
 
 	* gtkhtml.c (client_notify_widget): spell check or clear spell
